--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
+    "node-sass": "npm:dart-sass@^1.25.0",
     "postcss-comment": "^2.0.0",
+    "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
