--- a/package.json
+++ b/package.json
@@ -78,14 +78,18 @@
     "@dcloudio/webpack-uni-pages-loader": "^2.0.0-31920210514002",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
+    "eslint": "^7.28.0",
+    "eslint-plugin-vue": "^7.11.0",
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "node-sass": "npm:dart-sass@^1.25.0",
     "postcss-comment": "^2.0.0",
     "sass-loader": "^7.3.1",
+    "uview-ui": "^1.8.4",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
